# soccer_analysis

./: .gitignore  .gitmodules  CLAUDE.md  Containerfile  README.md  README_soccercv.md  SoccerCV Standalone_v2.html  alembic.ini  compose.debug.yml  compose.yml  main.py  plan.md  pyproject.toml  requirements-backend.txt  requirements.txt  rxconfig.py  soccercv-platform.code-workspace
.claude/commands/: bump-engine.md  db-reset.md  verify-components.md
app/: app.py
app/components/: calibration.py  charts.py  dashboard.py  dashboard_view.py  history_view.py  layout.py  navigation.py  pitch.py  player.py  primitives.py  report.py  report_view.py  settings.py  shell.py  upload.py  upload_view.py
app/states/: app_state.py  calibration_state.py  dashboard.py  jobs_state.py  navigation.py  player_state.py  report.py  report_state.py  settings_state.py  upload.py  upload_state.py
app/styles/: components.css  tokens.css  views.css
backend/: Containerfile  main.py
backend/db/: models.py  queries.py  seed.py  session.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 0001_initial_schema.py
backend/routers/: jobs.py  settings.py  teams.py
backend/schemas/: jobs.py
backend/services/: ai_analysis.py  pipeline.py
